z-index fixed bugs

--- a/app/assets/stylesheets/components/_ajax-nav-bar.scss
+++ b/app/assets/stylesheets/components/_ajax-nav-bar.scss
@@ -9,6 +9,7 @@
   width: 100%; /* Full width */
   // padding: 12px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  z-index: 999;
 }
 
 .navbar-ajax-white {
